...
            "state" : "translated",
            "value" : "Přidat titul"
          }
        }
      }
    },
    "Add titles" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Přidat tituly"
          }
...
            "state" : "translated",
            "value" : "K dispozici na"
          }
        }
      }
    },
    "Back" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zpět"
          }
...
            "state" : "translated",
            "value" : "Kolekce nenalezena"
          }
        }
      }
    },
    "Collections" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kolekce"
          }
...
            "state" : "translated",
            "value" : "Výchozí"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Smazat"
          }
...
            "state" : "translated",
            "value" : "Každý titul to může mít při úpravě jinak."
          }
        }
      }
    },
    "Edit" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Upravit"
          }
...
            "state" : "translated",
            "value" : "Označit vše"
          }
        }
      }
    },
    "Mark as watched" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Označit jako zhlédnuté"
          }
...
            "state" : "translated",
            "value" : "Zobrazit méně"
          }
        }
      }
    },
    "Show me around" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Provést aplikací"
          }
...
            "state" : "translated",
            "value" : "Přeskočit"
          }
        }
      }
    },
    "Skip the tour" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Přeskočit prohlídku"
          }
...
            "state" : "translated",
            "value" : "Watchlist"
          }
        }
      }
    },
    "Weekend picks" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Na víkend"
          }
...
